კატაძაღლი, კატაძაღლი! ასეთი კატაძაღლი ერთადერთია მსოფლიოში!
